feat: add code quality