@@ -2,6 +2,10 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.2.5'
     id 'io.spring.dependency-management' version '1.1.4'
+    id "org.sonarqube" version "5.0.0.4638"
+    id 'checkstyle'
+    id 'jacoco'
+    id 'pmd'
 }
 
 group = 'cl.tica.portfolio'
@@ -24,8 +28,67 @@ dependencies {
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'org.postgresql:postgresql'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'com.h2database:h2'
+}
+
+pmd {
+    ruleSetFiles = files("codequality/ruleset.xml")
+}
+
+checkstyle {
+    configFile = 'codequality/checkstyle.xml' as File
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        csv.required = true
+        xml.required = true
+    }
+}
+
+jacocoTestCoverageVerification {
+    violationRules {
+        rule {
+            limit {
+                counter = 'LINE'
+                minimum = 1.0
+            }
+        }
+
+        rule {
+            limit {
+                counter = 'BRANCH'
+                minimum = 1.0
+            }
+        }
+    }
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "rgdevment_RetrieveCountriesAPI"
+        property "sonar.organization", "rgdevment"
+        property "sonar.host.url", "https://sonarcloud.io"
+
+        property "sonar.java.checkstyle.reportPaths", [
+                "build/reports/checkstyle/main.xml",
+                "build/reports/checkstyle/test.xml"
+        ].join(",")
+        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
+
+        property "sonar.java.coveragePlugin", "jacoco"
+    }
+}
+
+project.tasks.named("sonar").configure {
+    dependsOn "checkstyleMain", "checkstyleTest", "jacocoTestReport"
 }
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
+}
+
+test {
+    jvmArgs("-XX:+EnableDynamicAgentLoading", "-Xshare:off")
 }
